# gapp

./: .clang-tidy  .cppcheck-supressions  .gitignore  .iwyu-mappings  .iwyu.imp  .travis.yml  .tsan-supressions  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GeneticAlgorithm.sln  GeneticAlgorithm.vcxproj  GeneticAlgorithm.vcxproj.filters  GeneticAlgorithm1.ruleset  LICENSE  Makefile  README.md  conanfile.py  core-guidelines.ruleset  gapp.natvis  genetic_algorithm.natvis
.github/codeql/: codeql-config.yml
.github/workflows/: analysis.yml  docs.yml  linux.yml  macos.yml  sanitizers.yml  windows.yml
docs/: .buildinfo  Doxyfile  README.md  TODO.txt  algorithms.md  constraint-handling.md  encodings.md  fitness-functions.md  genetic-operators.md  genindex.html  index.html  install-guide.md  introduction.md  metrics.md  miscellaneous.md  objects.inv  search.html  searchindex.js  stop-conditions.md
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: custom.css
docs/algorithm/: algorithm.html  algorithm_moga.html  algorithm_replacement.html  algorithm_selection.html  algorithm_soga.html
docs/api/: Doxyfile  conf.py  generate_api_docs.sh  index.rst  requirements.txt
docs/core/: encoding_binary.html  encoding_integer.html  encoding_mixed.html  encoding_permutation.html  encoding_real.html  encodings.html  fitness_function.html  population.html
docs/crossover/: crossover.html  crossover_binary.html  crossover_integer.html  crossover_mixed.html  crossover_permutation.html  crossover_real.html
docs/html/: annotated.html  classes.html  classgenetic__algorithm_1_1_binary_g_a-members.html  classgenetic__algorithm_1_1_binary_g_a.html  classgenetic__algorithm_1_1_g_a-members.html  classgenetic__algorithm_1_1_g_a.html  classgenetic__algorithm_1_1_integer_g_a-members.html  classgenetic__algorithm_1_1_integer_g_a.html  classgenetic__algorithm_1_1_permutation_g_a-members.html  classgenetic__algorithm_1_1_permutation_g_a.html  classgenetic__algorithm_1_1_r_c_g_a-members.html  classgenetic__algorithm_1_1_r_c_g_a.html  classgenetic__algorithm_1_1rng_1_1splitmix64-members.html  classgenetic__algorithm_1_1rng_1_1splitmix64.html  classgenetic__algorithm_1_1rng_1_1xoroshiro128p-members.html  classgenetic__algorithm_1_1rng_1_1xoroshiro128p.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  genetic__algorithm_8h.html  genetic__algorithm_8h_source.html  hierarchy.html  index.html  menudata.js  namespacegenetic__algorithm.html  namespacegenetic__algorithm_1_1rng.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  structgenetic__algorithm_1_1_g_a_1_1_candidate-members.html  structgenetic__algorithm_1_1_g_a_1_1_candidate.html  structgenetic__algorithm_1_1_g_a_1_1_candidate_hasher-members.html  structgenetic__algorithm_1_1_g_a_1_1_candidate_hasher.html  (+2 more)
docs/metrics/: metrics.html  metrics_distribution.html  metrics_fitness.html  metrics_misc.html
docs/mutation/: mutation.html  mutation_binary.html  mutation_integer.html  mutation_mixed.html  mutation_permutation.html  mutation_real.html
docs/problems/: problems.html  problems_integer.html  problems_tsp.html  (+3 more)
examples/: 10_fp_context.cpp  10_metrics.cpp  11_fp_context.cpp  1_binary_so.cpp  1_intro_binary_so.cpp  1_intro_minimal.cpp  1_minimal_example.cpp  1_rcga_basic.cpp  2_basic_single_objective.cpp  2_intro_detailed.cpp  2_rcga_so.cpp  3_basic_multi_objective.cpp  3_permutations_so.cpp  4_constrained_problem.cpp  4_fitness_functions.cpp  4_integer_so.cpp  5_fitness_functions.cpp  5_nsga2.cpp  6_algorithms.cpp  6_encodings.cpp  6_nsga3.cpp  7_algorithms.cpp  7_custom_operators.cpp  7_genetic_operators.cpp  8_custom_encoding.cpp  8_genetic_operators.cpp  8_stop_conditions.cpp  9_memetic.cpp  9_metrics.cpp  CMakeLists.txt
refs/: pareto_front.h
src/: algorithm.hpp  base_ga.decl.hpp  base_ga.h  base_ga.impl.hpp  binary_ga.h  candidate.h  candidate.hpp  concepts.hpp  crossover.h  gapp.hpp  genetic_algorithm.h  genetic_algorithm.hpp  integer_ga.h  math.cpp  math.hpp  mo_detail.h  permutation_ga.h  population.hpp  rcga.h  real_ga.h  reference_points.h  rng.h  rng.hpp  utils.h  utils.hpp
test/: benchmark.cpp  benchmark_utils.hpp  binary_soga.hpp  binary_tests.h  fitness_functions.h  fitness_functions.hpp  integer_soga.hpp  integer_tests.h  nsga2.hpp  nsga2_tests.h  nsga3.hpp  nsga3_tests.h  perm_soga.hpp  permutational_tests.h  real_soga.hpp  real_tests.h  time_test.h  utils.h
test/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_utils.hpp  binary_soga.hpp  cone_tree.cpp  fitness_functions.hpp  hypervolume.cpp  integer_soga.hpp  lower_bound.cpp  nd_sort.cpp  nsga2.hpp  nsga3.hpp  pareto_front.cpp  pareto_sets.cpp  perm_soga.hpp  random.cpp  rcu.cpp  real_soga.hpp  reference_points.cpp  sample_unique.cpp  thread_pool.cpp
test/benchmark/tsp_data/: tsp124.txt  tsp152.txt  tsp76.txt  tsp_data.hpp
test/benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_utils.hpp  binary_soga.hpp  integer_soga.hpp  nsga2.hpp  nsga3.hpp  perm_soga.hpp  real_soga.hpp
test/integration/: CMakeLists.txt  benchmark.cpp  benchmark_utils.hpp  binary_soga.hpp  crossover.cpp  integer_soga.hpp  main.cpp  mixed_encoding.hpp  nsga2.hpp  nsga3.hpp  perm_soga.hpp  real_soga.hpp  variable_length.hpp
test/unit/: CMakeLists.txt  algorithm.cpp  bit.cpp  cache.cpp  candidate.cpp  circular_buffer.cpp  concepts.cpp  cone_tree.cpp  constraints.cpp  crossover.cpp  distribution.cpp  dynamic_bitset.cpp  fitness_function.cpp  functional.cpp  ga_base.cpp  gene_types.cpp  hash.cpp  hypervolume.cpp  indestructible.cpp  iterators.cpp  math.cpp  matrix.cpp  metrics.cpp  mutation.cpp  nd_sort.cpp  pareto_front.cpp  pareto_sets.cpp  probability.cpp  problems.cpp  qrng.cpp  reference_lines.cpp  repair.cpp  replacement.cpp  reproducibility.cpp  rng.cpp  scope_exit.cpp  selection.cpp  small_vector.cpp  synchronization.cpp  test_utils.hpp  (+6 more)
tools/: install.sh  install_catch.sh
(+441 files in other folders)
